# SAE102-SpaceInvaders

./: .gitignore  CMakeLists.txt  README  config.yml
assets/: gameBackground.si2  heart.si2  invaderA.si2  invaderB.si2  invaderC.si2  logo.si2  menuBackground.si2  missile.si2  player1.si2  player2.si2  rightHand.si2  torpedo.si2
headers/: configData.h  configManagement.h  errors.h  game.h  god.h  goodPixelManager.h  invaderDef.h  invadersGrid.h  menu.h  mySprite.h  pixelManager.h  playMode.h  player.h  playerDef.h  projectiles.h  scoresManager.h  utils.h
lib_headers/mingl/: mingl.h
lib_headers/mingl/graphics/: vec2d.h
lib_headers/mingl/gui/: sprite.h  text.h
lib_headers/mingl/shape/: circle.h  line.h  rectangle.h  triangle.h
src/: configManagement.cpp  display.cpp  drawEntities.cpp  drawMenus.cpp  errors.cpp  gameBasics.cpp  gameManagers.cpp  godManager.cpp  goodPixelManager.cpp  invaderGrids.cpp  main.cpp  mySprite.cpp  pixelManager.cpp  player.cpp  projectiles.cpp  scoresManager.cpp  utils.cpp
